# lele_app

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.py  gui.py  lele.spec  main.py  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements-dev.txt  requirements.txt  transcribe.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build-windows.yml  ci.yml  release.yml  version.yml
docs/: guide_utilisateur.md
installer/: build_installer.py  installer.py
lele/: __init__.py
lele/analysis/: __init__.py  matrix.py  query.py  search.py
lele/analysis/auto_coding/: __init__.py  clustering.py  embeddings.py  engine.py  labeling.py  models.py
lele/importers/: __init__.py  audio.py  base.py  bibliography.py  image.py  refi_qda.py  spreadsheet.py  text.py  video.py
lele/models/: __init__.py  case.py  coding.py  memo.py  node.py  project.py  source.py
lele/ui/: __init__.py  main_window.py
lele/ui/dialogs/: __init__.py  auto_coding_config.py  auto_coding_preview.py  llm_settings.py  transcription_settings.py
lele/ui/panels/: __init__.py  analysis.py  coding.py  nodes.py  sources.py
lele/ui/widgets/: __init__.py
lele/utils/: __init__.py  ffmpeg.py  settings.py  system.py
lele/visualization/: __init__.py  charts.py  mindmap.py  sociogram.py  wordcloud_viz.py
tests/: __init__.py  test_version.py
